# Space_Shooter

./: .swp  Alien.cpp  Alien.h  Asteroid.cpp  Asteroid.h  Audio.cpp  Audio.h  CMakeLists.txt  Controller.cpp  Controller.h  Enemies.cpp  Enemies.h  Game.cpp  Game.h  GameLoader.cpp  GameLoader.h  Menu.cpp  Menu.h  Menu_backgrounds.cpp  Menu_backgrounds.h  Player.cpp  Player.h  README.md  Settings.cpp  Settings.h  Shoot.cpp  Shoot.h  ShootingAlien.cpp  ShootingAlien.h  Unit.cpp  Unit.h  main.cpp
Architectural Diagram/: Diagram_klas_Space_Shooter_1.graphml  yED Live link
